force-app/main/default/objects/Question__c/Question__c.object-meta.xml
<CustomObject>
    <description>This object is for holding the Question bank</description>
    <label>Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Question</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>