force-app/main/default/objects/Question__c/fields/Question_Category__c.field-meta.xml
<CustomField>
    <fullName>Question_Category__c</fullName>
    <label>Question Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>