force-app/main/default/objects/Question__c/fields/Question_Data_type__c.field-meta.xml
<CustomField>
    <fullName>Question_Data_type__c</fullName>
    <label>Question Data type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Radio Box</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>