force-app/main/default/objects/Question__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Question_Text__c</columns>
    <columns>Question_Data_type__c</columns>
    <columns>Active__c</columns>
    <columns>Is_Dependent__c</columns>
    <columns>Question_Bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>