force-app/main/default/objects/Question__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Question_Text__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Question_Data_type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>